--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Grade Calculator</title>
+<title>Module Calculator</title>
 
 <style>
 * {
     margin: 0;
-    padding: ;
+    padding: 0;
     box-sizing: border-box;
 }
 body { 
@@ -21,7 +21,7 @@ table {
     width: 100%;
     border-collapse:separate ;
     border-spacing: 5px;
-    background: #fefaff;
+    background: transparent;
 }
 
 th, td {
@@ -47,18 +47,66 @@ input {
 .name {
     width: 150px;
 }
-
-body button {
-    font-weight: bold;
-    margin-top: 15px;
-    padding: 10px 15px;
-    cursor: pointer;
-    font-size: 14px;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    color: rgb(89, 75, 97);
+.tbl {
+min-width: fit-content;
+    padding: 2px;
+    border-radius: 10px;
+    border: none;
+    background-color: #f1ecff;
+        box-shadow: 0px 0px 20px 0px rgba(39, 0, 131, 0.1);
 }
+
+button{
+    display: block;
+    margin: 20px auto;
+  border: none;
+  color:rgb(89, 75, 97);
+  font-size:14px;
+  font-weight: bold;
+  position: relative;
+  width: 110px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(30, 0, 87);
+  border-radius: 20px;
+}
+@property --deg{
+  syntax: '<angle>';
+  inherits: true;
+  initial-value: 0deg;
+}
+button::before,
+button::after{
+  content: "";
+  border-radius: 12px;
+  width: 103%;
+  height: 108%;
+  position: absolute;
+  background: conic-gradient(from var(--deg), #dcc1ff, #c4b9ff, #d1a9ff, #d5b0ff);
+  z-index: -2;
+  animation: rotate 2s linear infinite;
+  animation-play-state: running;
+}
+button::after{
+  z-index: -1;
+  filter: blur(10px);
+} 
+@keyframes rotate {
+  to {
+    --deg: 360deg;
+  }  
+}
+button:hover::after{
+  filter: blur(15px);
+}
+button:hover::before,
+button:hover::after {
+ animation: rotate 2s linear infinite;
+ animation-play-state: running;
+}
+
 
 .result {
     margin-top: 15px;
@@ -85,8 +133,9 @@ p {
 
 <body>
 
-<h2>Final Grade Calculator</h2>
+<h2>Module Final Grade Calculator</h2>
 
+<div class="tbl">
 <table id="table">
 <thead>
 <tr>
@@ -103,6 +152,7 @@ p {
 <tbody>
 </tbody>
 </table>
+</div>
 
 <button onclick="addRow()" style="background-color:#f2f0ff; border-style: none; border-radius:10px;">Add Module</button>
 
@@ -191,4 +241,3 @@ addRow();
 
 </body>
 </html>
-
