Refactor HTML structure and styles for calculator

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ table {
 
 th, td {
     border: 1px none hsl(240, 100%, 5%);
-    border-radius: 5px;
+    border-radius: 7px;
     padding: 8px;
     text-align: center;
     background-color: #e6e7ff;
@@ -42,6 +42,7 @@ input {
     width: 90px;
     height: 25px;
     text-align: center;
+    background-color: #fefdff;
 }
 input:focus {
     outline: rgb(178, 161, 255) 1px solid;
@@ -59,9 +60,9 @@ min-width: fit-content;
         box-shadow: 0px 0px 20px 0px rgba(39, 0, 131, 0.1);
 }
 
-button{
+.add{
     display: block;
-    margin: 20px auto;
+    margin: 30px auto;
   border: none;
   color:rgb(89, 75, 97);
   font-size:14px;
@@ -80,8 +81,8 @@ button{
   inherits: true;
   initial-value: 0deg;
 }
-button::before,
-button::after{
+.add::before,
+.add::after{
   content: "";
   border-radius: 12px;
   width: 103%;
@@ -92,22 +93,39 @@ button::after{
   animation: rotate 2s linear infinite;
   animation-play-state: running;
 }
-button::after{
+.add::after{
   z-index: -1;
   filter: blur(10px);
+  transition: filter 0.5s ease;
 } 
 @keyframes rotate {
   to {
     --deg: 360deg;
   }  
 }
-button:hover::after{
+.add:hover::after{
   filter: blur(15px);
 }
-button:hover::before,
-button:hover::after {
+.add:hover::before,
+.add:hover::after {
  animation: rotate 2s linear infinite;
  animation-play-state: running;
+}
+.rmv{
+    padding: 5px 10px;
+    background-color: #9582ff;
+    border-style: none;
+    border-radius:10px;
+    width: fit-content;
+    height: 30px;
+    font-weight: bold;
+    cursor: pointer;
+    color: whitesmoke;
+    transition: background-color 0.3s ease;
+}
+.rmv:hover{
+    background-color: #765eff;
+
 }
 
 h2 {
@@ -116,11 +134,14 @@ h2 {
 }
 p {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
     font-weight: bold;
 }
-.result {
+#sumWeighted {
+    margin-top: 30px;
 
+}
+.result {
     margin-left: 10px;
     margin-top: 20px;
     font-size: 18px;
@@ -131,6 +152,34 @@ p {
 }
 .fail {
     color: red;
+}
+@keyframes rowEnter {
+    from {
+        opacity: 0;
+        transform: translateY(12px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.new-row {
+    animation: rowEnter 0.3s ease-out forwards;
+}
+@keyframes rowExit {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(12px);
+    }
+}
+
+.removing-row {
+    animation: rowExit 0.25s ease-in forwards;
 }
 </style>
 </head>
@@ -150,6 +199,7 @@ p {
     <th>Parameter</th>
     <th>Final / 20</th>
     <th>Final × Parameter</th>
+    <th>Remove module</th>
 </tr>
 </thead>
 
@@ -158,7 +208,7 @@ p {
 </table>
 </div>
 
-<button onclick="addRow()" style="background-color:#f2f0ff; border-style: none; border-radius:10px;">Add Module</button>
+<button class="add" onclick="addRow()" style="background-color:#f2f0ff; border-style: none; border-radius:10px;">Add Module</button>
 
 <div class="result" id="sumWeighted">sum (final × parameter) : 0</div>
 <div class="result">
@@ -177,6 +227,7 @@ function addRow() {
     const tbody = document.querySelector("#table tbody");
 
     const tr = document.createElement("tr");
+    tr.classList.add("new-row"); // 
     tr.innerHTML = `
         <td><input class="name" type="text"></td>
         <td><input type="number" min="0" max="20" oninput="calculate()"></td>
@@ -185,9 +236,23 @@ function addRow() {
         <td><input type="number" min="1" value="1" oninput="calculate()"></td>
         <td class="final">0</td>
         <td class="weighted">0</td>
+        <td>
+            <button class="rmv" onclick="removeRow(this)">remove</button>
+        </td>
     `;
     tbody.appendChild(tr);
 }
+function removeRow(btn) {
+    const row = btn.closest("tr");
+
+    row.classList.add("removing-row");
+
+    row.addEventListener("animationend", () => {
+        row.remove();
+        calculate();
+    }, { once: true });
+}
+
 
 function calculate() {
     const rows = document.querySelectorAll("#table tbody tr");
